--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -15,6 +15,7 @@
 
     <div class="container">
         <ul class="chat-thread">
+            <li class="alert">Katıldınız</li>
         </ul>
 
         <form class="chat-window">
@@ -25,7 +26,10 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.1/socket.io.js"></script>
-
+    <script>
+        const socket = io("http://192.168.1.23:5555")
+        const username = "<%=username%>"
+    </script>
     <script src="script.js"></script>
 </body>
 
