--- a/views/room.ejs
+++ b/views/room.ejs
@@ -6,15 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Message App</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
 </head>
 
 <body>
-
     <div class="container">
         <ul class="chat-thread">
-            <li class="alert">Katıldınız</li>
         </ul>
 
         <form class="chat-window">
@@ -22,14 +20,12 @@
         </form>
 
     </div>
-
+    <script>
+        const roomName = "<%= roomName %>"
+    </script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.1/socket.io.js"></script>
-    <script>
-        const socket = io("<%=process.env.SOCKET_SERVER%>")
-        const username = "<%=username%>"
-    </script>
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 </body>
 
 </html>
