--- a/views/room.ejs
+++ b/views/room.ejs
@@ -16,7 +16,7 @@
         </ul>
 
         <form class="chat-window">
-            <input class="chat-window-message" name="chat-window-message" type="text" autocomplete="off" autofocus />
+            <input class="chat-window-message" placeholder="Mesajınızı Buraya Girin" name="chat-window-message" type="text" autocomplete="off" autofocus />
         </form>
 
     </div>
@@ -27,5 +27,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.1/socket.io.js"></script>
     <script src="/script.js"></script>
 </body>
-
 </html>
