--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,58 +9,94 @@
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
     <style>
+        
         form {
             width: 100%;
             display: flex;
             flex-direction: row;
-            margin-top: 50px;
             height: 48px;
+            border-radius: 18px;
+            overflow: hidden;
         }
         
         input[type="text"] {
             -webkit-box-direction: normal;
-            font: 24px/48px 'Noto Sans', sans-serif;
-            background: none;
-            border-top-left-radius: 48px;
-            border-bottom-left-radius: 48px;
-            padding-left: 15px;
-            border: 1px solid #19939333;
+            font-size: 18px;
+            caret-color: #548DB8;
+            font-family: 'Noto Sans', sans-serif;
+            background: #1D2935;
+            
+            padding:0 15px;
+            border:none;
             outline: none;
-            background-image: none;
-            background-color: initial;
-            color: rgb(57, 246, 227);
-            border-color: rgba(30, 174, 174, 0.2);
-            outline-color: initial;
+            color: #D2DBE2;
             flex: 8;
         }
-        
+        input[type="text"]::placeholder{
+            color: #5E6E7B;
+        }
         ul {
             width: 100%;
             padding: 0;
             display: flex;
             flex-direction: column;
             height: auto;
+            margin: 0;
         }
         
         ul li {
-            color: #e8e6e3;
+            color: #D2DBE2;
             margin: 0 auto;
             -webkit-box-direction: normal;
             width: 50%;
             display: flex;
             flex-direction: row;
-            margin-top: 50px;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 20px;
             height: 48px;
+            border-radius: 15px;
+            overflow: hidden;
+            background-color: #1D2935;
         }
-        
-        ul li span {
-            background-color: rgb(20 22 47);
-            color: rgb(67 242 168);
+        ul h1{
+            width: 100%;
+            display: block;
+            text-align: center;
+            color: #D2DBE2;
+        }
+        ul li .room-name {
+            
             padding-left: 20px;
-            flex: 8;
+            flex: 7;
             font: 18px/48px 'Noto Sans', sans-serif;
         }
-        
+        .room-user-count{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            background-color: #5E6E7B;
+            color: #fff;
+            font: 14px/48px 'Noto Sans', sans-serif;
+            width: 30px;
+            height: 30px;
+            margin-right: 15px;
+            cursor: default;
+            user-select: none;
+        }
+        .room-alert{
+            background-color: #1e272f;
+            color: #D2DBE2;
+            font-size: 24px;
+            display: flex;
+            align-items: center;
+            width: 450px;
+            justify-content: center;
+            height: 48px;
+            margin: 0 auto;
+            border-radius: 18px;
+        }
         ul li a,
         button[type="submit"] {
             flex: 2;
@@ -68,14 +104,12 @@
             -webkit-box-direction: normal;
             font: 18px/48px 'Noto Sans', sans-serif;
             background: none;
-            border-top-right-radius: 48px;
-            border-bottom-right-radius: 48px;
-            padding-left: 15px;
+            padding:0 7.5px;
             outline: none;
             border: none;
             cursor: pointer;
-            color: rgb(57, 246, 227);
-            background-color: rgba(30, 174, 174, 0.2);
+            color: #D2DBE2;
+            background-color: #396294;
             outline-color: initial;
         }
         
@@ -90,18 +124,25 @@
 <body>
     <div class="container">
         <ul id="room-container">
-            <% Object.keys(rooms).forEach(room => { %>
-                <li>
-                    <span>
-                        <%= room %>
-                    </span>
-                    <a href="/room/<%= room %>">Katıl</a>
-
-                </li>
-                <% }) %>
+            <h1>Açık Odalar</h1>
+            <%if(Object.keys(rooms).length > 0){%>
+                <% Object.keys(rooms).forEach(room => { %>
+                    <li data-room-name="<%=room%>">
+                        <span class="room-name">
+                            <%= room %>
+                        </span>
+                        <span class="room-user-count" title="<%=Object.keys(rooms[room].users).length%> kullanıcı şuan bu odada."><%=Object.keys(rooms[room].users).length%></span>
+                        <a href="/room/<%= room %>">Katıl</a>
+    
+                    </li>
+                    <% }) %>    
+                
+            <%}else{%>
+                <div class="room-alert">Herhangi bir oda bulunamadı</div>    
+            <%}%>
         </ul>
         <form action="/room" method="POST">
-            <input name="room" autocomplete="false" type="text" required>
+            <input name="room" placeholder="Oda oluşturmak için bir isim girin." autocomplete="false" type="text" required>
             <button type="submit">Yeni Oda</button>
         </form>
     </div>
